<resources>
    <string name="app_name">Banco Dom Bosco</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="entrar">Entrar</string>
    <string name="crie_sua_conta">Crie Sua Conta</string>
    <string name="salvar">Salvar</string>
    <string name="nome_completo">1%s 2%s</string>
</resources>