<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp"
        android:contentDescription="Imagem de Login"
        android:src="@drawable/ic_login" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_margin="5sp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtLogin"
        android:inputType="textEmailAddress"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:background="@drawable/borda_arredondada"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:layout_margin="5sp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:background="@drawable/borda_arredondada"/>

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5sp"/>
    <TextView
        android:id="@+id/lblCrieSuaConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crie_sua_conta"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_margin="5sp"/>

</LinearLayout>